<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/dg_descr2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/dialog_descr_sf"
            android:textAlignment="center"
            android:textSize="14sp"
            android:typeface="monospace"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/schArt_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/schArt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="37dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/d_damage"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp"
            android:typeface="normal"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

        <Spinner
            android:id="@+id/spinnerSchArt"
            android:layout_width="186dp"
            android:layout_height="28dp"
            android:layout_marginBottom="43dp"
            android:layout_marginTop="33dp"
            android:background="@color/box_fill"
            app:layout_constraintBottom_toBottomOf="@+id/reviewer_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/schArt_text"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/reviewer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="81dp"
            android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="82dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/d_gutachter"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp"
            android:typeface="normal"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/schArt_text"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintVertical_bias="0.0" />

        <Spinner
            android:id="@+id/spinnerSchGutachter"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:background="@color/box_fill"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/spinnerSchArt"
            android:layout_marginTop="51dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerSchArt"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/spinnerSchArt"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/d_region"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp"
            android:typeface="normal"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_constraintBottom_creator="1" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/d_stadt"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="16sp"
            android:typeface="normal"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/stadtText2"
            app:layout_constraintLeft_toLeftOf="@+id/textView9"
            tools:layout_constraintLeft_creator="1" />

        <AutoCompleteTextView
            android:id="@+id/landText2"
            style="@android:style/Widget.AutoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:background="@color/colorAccent"
            android:backgroundTint="@color/box_fill"
            android:completionHint="Region, Lage, Standort"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/bundeslandText2"
            app:layout_constraintRight_toRightOf="@+id/bundeslandText2"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginBottom="10dp"
            app:layout_constraintLeft_toLeftOf="@+id/bundeslandText2"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/d_bland"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="16sp"
            android:typeface="normal"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/bundeslandText2"
            app:layout_constraintLeft_toLeftOf="@+id/textView7"
            tools:layout_constraintLeft_creator="1" />

        <AutoCompleteTextView
            android:id="@+id/bundeslandText2"
            style="@android:style/Widget.AutoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:background="@color/colorAccent"
            android:backgroundTint="@color/box_fill"
            android:completionHint="Region, Lage, Standort"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/landkreisText2"
            app:layout_constraintRight_toRightOf="@+id/landkreisText2"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginBottom="10dp"
            app:layout_constraintLeft_toLeftOf="@+id/landkreisText2" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/d_bezirk"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="16sp"
            android:typeface="normal"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/landkreisText2"
            app:layout_constraintLeft_toLeftOf="@+id/textView8"
            tools:layout_constraintLeft_creator="1" />

        <AutoCompleteTextView
            android:id="@+id/landkreisText2"
            style="@android:style/Widget.AutoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:background="@color/colorAccent"
            android:backgroundTint="@color/box_fill"
            android:completionHint="Region, Lage, Standort"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/stadtText2"
            app:layout_constraintRight_toRightOf="@+id/stadtText2"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginBottom="10dp"
            app:layout_constraintLeft_toLeftOf="@+id/stadtText2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/d_land"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="16sp"
            android:typeface="normal"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/landText2"
            app:layout_constraintLeft_toLeftOf="@+id/textView6"
            tools:layout_constraintLeft_creator="1" />

        <AutoCompleteTextView
            android:id="@+id/stadtText2"
            style="@android:style/Widget.AutoCompleteTextView"
            android:layout_width="100dp"
            android:layout_height="28dp"
            android:background="@color/colorAccent"
            android:backgroundTint="@color/box_fill"
            android:completionHint="Land, Bundesland, Landkreis, Stadt, "
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            android:layout_marginStart="88dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="88dp"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginBottom="222dp"
            app:layout_constraintLeft_toRightOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="174dp"
            android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="174dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/d_foto"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp"
            android:typeface="normal"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintTop_creator="1" />

        <Button
            android:id="@+id/sphotoBtn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="111dp"
            android:layout_height="32sp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:background="@color/box_fill"
            android:elevation="9dp"
            android:fontFamily="sans-serif"
            android:text="@string/foto"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Design.Tab"
            android:textSize="10sp"
            android:typeface="normal"
            app:layout_constraintLeft_toLeftOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />


        <Button
            android:id="@+id/btn_abbrechen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:elevation="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/button_cancel"
            android:textAlignment="center"
            android:textSize="14sp"
            android:typeface="normal"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:elevation="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/button_okay"
            android:textAlignment="center"
            android:textSize="14sp"
            android:typeface="normal"
            android:visibility="visible"
            android:layout_marginEnd="34dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>
</RelativeLayout>