<?xml version="1.0" encoding="utf-8"?><!-- This DrawerLayout has two children at the root  -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!---<org.osmdroid.views.MapView android:id="@+id/maps"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />-->

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="de.uni_stuttgart.informatik.sopra.sopraapp.Maps" />
    <!-- This LinearLayout represents the contents of the screen  -->

...
